[tool.poetry]
name = "ap-2023"
version = "0.1.0"
description = "AP program for 2023"
authors = ["lishaduck <88557639+lishaduck@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ap_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
art = "^5.8"
Pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
isort = "^5.11.4"
poetry = "^1.3.1"
pydocstyle = "^6.2.2"
pylint = "^2.15.9"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]